Add telemetry prototype

--- a/scripts/astro_pi.ini
+++ b/scripts/astro_pi.ini
@@ -15,10 +15,12 @@
 #   Define Astro Pi python configuration parameters 
 #
 [APP]
-LOOP_DELAY = 2
+RX_LOOP_DELAY = 2
+TX_LOOP_DELAY = 2
 
 [JMSG]
-JMSG_TOPIC_NAME_PREFIX = basecamp/script:
+JMSG_TOPIC_SCRIPT_CMD_NAME = basecamp/script/cmd:
+JMSG_TOPIC_SCRIPT_TLM_NAME = basecamp/script/tlm:
 JMSG_MAX_LEN = 1024
 
 [NETWORK]
