Prelim testing with astro_pi_sim.py

--- a/scripts/astro_pi.ini
+++ b/scripts/astro_pi.ini
@@ -20,8 +20,11 @@ TX_LOOP_DELAY = 2
 
 [JMSG]
 JMSG_TOPIC_SCRIPT_CMD_NAME = basecamp/script/cmd:
-JMSG_TOPIC_SCRIPT_TLM_NAME = basecamp/script/tlm:
+JMSG_TOPIC_CSV_TLM_NAME = basecamp/csv/tlm:
 JMSG_MAX_LEN = 1024
+# Command codes for JMSG_TOPIC_SCRIPT_CMD
+RUN_SCRIPT_TEXT_CMD = 1
+RUN_SCRIPT_FILE_CMD = 2
 
 [NETWORK]
 CFS_IP_ADDR  = 127.0.0.1
